--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&display=swap");
     </style>
-    <title>Vite + React</title>
+    <title>Weatherify</title>
   </head>
   <body>
     <div id="root"></div>
